# Kraken

./: .clang-format  .gitmodules  CMakeLists.txt  patcher-comrem.py
include/: config.hpp  configstructs.hpp  containers.hpp  routines.hpp  stdafx.hpp  utils.hpp
include/ext/: impulse.hpp  inpulse.hpp
include/fix/: aicombatlock.hpp  autobrakefix.hpp  cardan.hpp  cinematic.hpp  complexschwarz.hpp  controls.hpp  fastloading.hpp  fileserver.hpp  gunlights.hpp  impulse.hpp  kineticfriction.hpp  locationdebug.hpp  luabinds.hpp  mortarvolleylauncherfix.hpp  posteffectreload.hpp  recollectionfix.hpp  render.hpp  schwarzfix.hpp  skinfix.hpp  tactics.hpp  timeofday.hpp  ultrawide.hpp  wareuse.hpp  watereffect.hpp
include/hta/: AABB.hpp  CAffineXForm.hpp  CCamera.h  CCamera.hpp  CClipper.hpp  CMatrix.h  CMatrix.hpp  CPlane.hpp  CStr.h  CVector.h  CVector2.h  CVector2.hpp  CVector4.hpp  DragDropItemsWnd.h  Enums.hpp  Func.h  IBase.h  NFloat4.hpp  OBB.hpp  Quaternion.h  event.hpp  pointers.hpp  ref_ptr.h  scoped_ptr.h  scoped_ptr.hpp
include/hta/ai/: AI.cpp  AI.h  AI.hpp  AIMessage.h  AIPassageState.h  BaseFunction.hpp  Box.hpp  CServer.cpp  CServer.hpp  ComplexPhysicObj.h  ComplexPhysicObjPartDescription.h  ComplexPhysicObjPrototypeInfo.h  CompoundGun.hpp  CompoundVehiclePart.hpp  DamageInfo.h  DamageInfo.hpp  DrivingValues.h  DynamicQuestPeace.hpp  DynamicScene.cpp  DynamicScene.hpp  Event.h  Event.hpp  FlatLine.h  Formation.h  FuncPtr.hpp  Gadget.h  Gadget.hpp  GameTime.hpp  Geom.h  GeomRepository.h  GeomRepositoryItem.h  GeomTransform.h  GlobalProperties.h  Gun.h  Gun.hpp  IPriceCoeffProvider.h  JointedObj.hpp  Modifier.h  Obj.cpp  Obj.h  (+31 more)
include/hta/help/: HelperFuncs.h
include/hta/m3d/: AIParam.cpp  AIParam.h  AIParam.hpp  AnimInfo.hpp  Application.h  CClient.h  CFlare.hpp  CIntHash.hpp  CMiracle3d.h  CServer.h  CStrHash.hpp  CVar.h  CVar.hpp  CWorld.cpp  CWorld.h  CWorld.hpp  Class.h  DbgCounter.h  EngineConfig.h  GameImpulse.h  GeomObject.hpp  GeomObjectRoad.hpp  IConHandler.hpp  IInput.h  Kernel.h  Landscape.cpp  Landscape.hpp  Level.hpp  MemoryAllocationRoutines.h  Object.h  ObjectsContainer.hpp  Profiler.hpp  RefCountedBase.h  RoadManager.hpp  RoadNode.cpp  RoadNode.hpp  RoadSet.hpp  SceneGraph.hpp  SgNode.hpp  SgSoundSourceNode.hpp  (+9 more)
include/hta/m3d/cmn/: vector.hpp
include/hta/m3d/rend/: Common.hpp  Handle.hpp  IEffect.hpp  IHlslShader.hpp  IQuery.hpp  IRenderResource.hpp  IbHandle.hpp  IbPoolField.hpp  TexHandle.hpp  VbHandle.hpp  VbPoolField.hpp  Vertices.hpp
include/hta/m3d/ui/: AdvancedList.hpp  BasketList.hpp  CBButton.hpp  CBList.hpp  CabinList.hpp  ChildPanel.hpp  DragDropItemsWnd.hpp  GarageWnd.hpp  RechargeList.hpp  RefuelList.hpp  RepairList.hpp  SkinsWnd.hpp
include/ode/: ode.hpp
source/: config.cpp  entry.cpp  stdafx.cpp  stdafx.hpp
source/ext/: impulse.cpp  logger.cpp  logger.hpp  runtime.cpp
source/fix/: aicombatlock.cpp  autobrakefix.cpp  cardan.cpp  cctlleakfix.cpp  cinematic.cpp  complexschwarz.cpp  controls.cpp  difficultywndescapefix.cpp  fastloading.cpp  fileserver.cpp  gunlights.cpp  kineticfriction.cpp  locationdebug.cpp  luabinds.cpp  luabinds.hpp  mortarvolleylauncherfix.cpp  objcontupgrade.cpp  physic.cpp  posteffectreload.cpp  recollectionfix.cpp  render.cpp  schwarzfix.cpp  skinfix.cpp  tactics.cpp  tactics.hpp  timeofday.cpp  ultrawide.cpp  wareuse.cpp  watereffect.cpp
source/help/: HelperFuncs.cpp
source/hta/m3d/ui/: GarageWnd.cpp
source/kraken/: CMakeLists.txt
source/kraken/assets/: CMakeLists.txt  Common.cpp  Common.hpp  Manager.cpp  Manager.hpp  Texture.cpp  Texture.hpp  Weather.hpp
source/kraken/codex/: CMakeLists.txt  TextureDX9.cpp  TextureDX9.hpp  WeatherJSON.cpp  WeatherJSON.hpp  WeatherXML.cpp  WeatherXML.hpp
source/kraken/common/: string.cpp  string.hpp
source/kraken/config/: CMakeLists.txt  config.cpp  config.hpp  configstructs.hpp
source/kraken/entity/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  Weather.hpp
source/kraken/entry/: CMakeLists.txt  entry.cpp
source/kraken/fixes/: CMakeLists.txt  animations.cpp  animations.hpp  autobrakefix.cpp  cardan.cpp  cctlleakfix.cpp  cctlleakfix.hpp  complexschwarz.cpp  complexschwarz.hpp  difficultywndescapefix.cpp  difficultywndescapefix.hpp  fastloading.cpp  fileserver.cpp  gunlights.cpp  kineticfriction.cpp  locationdebug.cpp  luabinds.cpp  luabinds.hpp  memory.cpp  memory.hpp  mortarvolleylauncherfix.cpp  mortarvolleylauncherfix.hpp  objcontupgrade.cpp  physic.cpp  posteffectreload.cpp  posteffectreload.hpp  recollectionfix.cpp  recollectionfix.hpp  skinfix.cpp  tactics.cpp  ultrawide.cpp  wareuse.cpp  wareuse.hpp
source/kraken/impulse/: CMakeLists.txt  impulse.cpp  impulse.hpp
source/kraken/logger/: CMakeLists.txt  logger.cpp
source/kraken/memory/: CMakeLists.txt  item.hpp  memory.cpp  memory.hpp  page.hpp  pool.hpp  shared.hpp
source/kraken/runtime/: CMakeLists.txt  runtime.cpp  runtime.hpp
source/render/: CDevice.cpp  CDevice.hpp  helper.hpp
source/render/d3d9/: Common.hpp  Debug.cpp  Debug.hpp  Shared.hpp  Texture.cpp  Texture.hpp  Uniform.cpp  Uniform.hpp
source/render/native/: Common.hpp  Debug.cpp  Debug.hpp  Image.cpp  Image.hpp  Uniform.cpp  Uniform.hpp
